# app

fast_api_project/services/api-gateway/src/: main.py
fast_api_project/services/auth_service/: .gitIgnore  pyproject.toml
fast_api_project/services/auth_service/src/auth/: config.py  main.py
fast_api_project/services/auth_service/src/auth/application/ports/: __init__.py  password_hasher.py  token_generator.py
fast_api_project/services/auth_service/src/auth/application/use_cases/: __init__.py  login.py  register.py
fast_api_project/services/auth_service/src/auth/domain/: __init__.py
fast_api_project/services/auth_service/src/auth/domain/entities/: user.py
fast_api_project/services/auth_service/src/auth/domain/exceptions/: exceptions.py
fast_api_project/services/auth_service/src/auth/domain/repositories/: __init__.py  user_repository.py
fast_api_project/services/auth_service/src/auth/domain/value_objects/: __init__.py  email.py  password.py
fast_api_project/services/auth_service/src/auth/infrastructure/adapters/: __init__.py  bcrypt_hasher.py  jwt_token_generator.py
fast_api_project/services/auth_service/src/auth/infrastructure/database/: repositories.py  user_model.py
fast_api_project/services/auth_service/src/auth/infrastructure/middleware/: __init__.py  rate_limiter.py
fast_api_project/services/auth_service/src/auth/interface/api/: auth_routes.py
fast_api_project/services/auth_service/src/auth/interface/api/schemas/: login_request.py  register_request.py  user_response.py
fast_api_project/services/auth_service/tests/unit/: test_domain.py
(+3 files in other folders)
